# loansforgood

./: .dockerignore  .env.docker  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  local.env  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js
loansforgood/: manage.py
loansforgood/apps/loans/: admin.py  choices.py  constants.py  filters.py  models.py  routes.py  serializers.py  tasks.py  views.py
loansforgood/apps/loans/management/commands/: create_proposal_default_custom_fields.py  create_super_user.py
loansforgood/apps/loans/migrations/: 0001_initial.py
loansforgood/loansforgood/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
loansforgood/tests/loans/: conftest.py  factories.py  test_models.py  test_serializers.py  test_tasks.py  test_views.py
